kube/admin-frontend-deployment.yaml
# Define a Deployment for the TypeScript frontend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-frontend
  template:
    metadata:
      labels:
        app: admin-frontend
    spec:
      containers:
        - name: admin-frontend
          image: smaii/pickbazar-admin # Replace with your TypeScript frontend Docker image
          ports:
            - containerPort: 3000
