kube/backend-deployment.yaml
# laravel-backend-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel-backend
  template:
    metadata:
      labels:
        app: laravel-backend
    spec:
      containers:
        - name: laravel-backend
          image: smaii/pickbazar-laravel
          ports:
            - containerPort: 80
