kube/frontend-deployment.yaml

# Define a Deployment for the TypeScript frontend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: typescript-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: typescript-frontend
  template:
    metadata:
      labels:
        app: typescript-frontend
    spec:
      containers:
        - name: typescript-frontend
          image: smaii/pickbazar-admin # Replace with your TypeScript frontend Docker image
          ports:
            - containerPort: 3000
