kube/admin-frontend-service.yaml
# Define a Service for the TypeScript frontend
apiVersion: v1
kind: Service
metadata:
  name: admin-frontend-service
spec:
  selector:
    app: admin-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
